# xword

./: .dockerignore  .gitignore  Caddyfile  DEPLOYING.md  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
July23-Minis/: Jul0323.TXT  Jul0423.TXT  Jul0523.TXT  Jul0623.TXT  Jul0723.TXT  Jul0823.TXT  Jul0923.TXT  Jul1023.TXT  Jul1123.TXT  Jul1223.TXT  Jul1323.TXT  Jul1423.TXT  Jul1523.TXT  Jul1623.TXT  Jul2423.TXT  Jul2523.TXT  Jul2623.TXT  Jul2723.TXT  Jul2823.TXT  Jul2923.TXT  Jul3023.TXT
examples/: generate_mini.py
frontend/: index.html
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: ClueList.tsx  CrosswordGrid.tsx  GeneratePage.tsx  PlayPage.tsx  Toolbar.tsx
frontend/src/hooks/: useNavigation.ts  usePuzzle.ts  useTimer.ts
frontend/src/styles/: global.css  grid.css
server/: app.py
solver-rs/: Cargo.toml  pyproject.toml
solver-rs/src/: lib.rs
src/crossword/: __init__.py  __main__.py  clues.py  grid.py  judge.py  main.py  puzzle.py  solver.py  wordlist.py
tests/: conftest.py  test_grid.py  test_puzzle.py  test_solver.py  test_wordlist.py
