[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crossword"
version = "0.1.0"
description = "NYT-style crossword puzzle generator"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
crossword = "crossword.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/crossword"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
